fix: wrap subscribe elements in form

--- a/styles.css
+++ b/styles.css
@@ -175,23 +175,24 @@ body {
     box-sizing: border-box;
 }
 
+.subscribe__form {
+    padding: 30px 0 35px;
+
+    font-size: 0;
+}
+
 .subscribe__input {
-    background: #FFFFFF;
+    padding: 13px 33px 15px;
+
+    font-size: 16px;
+    font-family: Montserrat;  
+
+    background: #FFF;
     border: 1px solid #F2F2F2;
     border-radius: 30px 0 0 30px;
-    width: 35%;
-    height: 47px;
-    padding: 13px 33px 15px;
-    font-size: 16px;
-    font-family: Montserrat;
 }
 
 .btn {
-    position: relative;
-    left: -7px;
-    top: 1px;
-    
-    margin-left: 0;
     padding: 13px 33px 15px;
 
     font-family: Montserrat;
@@ -200,7 +201,13 @@ body {
     text-decoration: none;
     
     background: #4985FF;
+    border: none;
     border-radius: 0px 30px 30px 0px;
+}
+
+.small-text {
+    font-size: 13px;
+    line-height: 21px;
 }
 
 .contacts__row {
@@ -248,10 +255,6 @@ body {
 .contacts__list__labled {
     list-style-image: url(img/right-arrow.svg);
     padding-left: 1.25em;
-}
-
-.copyright {
-    font-size: 13px;
 }
 
 /* Sections */
